--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+    informação
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<h1>Guilherme Santos</h1><br>
+Turma: Ti-B <br>
+Escola: Faacg <br>
+Email: guilhermesr72@gmail.com<br>
+<img src="https://instagram.fcgh37-1.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/p640x640/241392290_219263370179705_3830216602836089203_n.jpg?_nc_ht=instagram.fcgh37-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=W-FvitQ9Gs0AX_y4lGP&edm=AP_V10EBAAAA&ccb=7-4&oh=b3e696d7223e1db11fc2a197d0d84975&oe=61456E85&_nc_sid=4f375e">
 </ion-content>
